frontend/yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sample-frontend
  name: sample-frontend
  namespace: default
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: sample-frontend
  sessionAffinity: None
  type: NodePort
