frontend/yaml/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  labels: 
    app: sample-frontend
  name: sample-frontend
  namespace: default
spec:
  rules:
  - host: local.example.com
    http:
      paths:
      - backend:
          serviceName: sample-frontend
          servicePort: 80
        path: /?(.*)
